fix(tb): notifications overflow

--- a/static/themes/default/theme.toolbar.css
+++ b/static/themes/default/theme.toolbar.css
@@ -15,6 +15,8 @@
   font-size: 0.8rem;
   font-weight: 500;
 
+  --popups-margin: 4px;
+
   ::-webkit-scrollbar {
     width: 8px;
     height: 8px;
@@ -96,7 +98,7 @@
 
 .fast-settings {
   padding: 12px 16px;
-  margin: 4px;
+  margin: var(--popups-margin);
 
   .fast-settings-bg-layer-1 {
     background-color: var(--color-gray-50);
@@ -114,7 +116,7 @@
 }
 
 .tray {
-  margin: 4px;
+  margin: var(--popups-margin);
 
   .tray-bg-layer-1 {
     background-color: var(--color-gray-50);
@@ -141,7 +143,7 @@
   height: min-content;
 
   &:hover {
-    background-color: var(--config-accent-color);
+    background-color: rgba(var(--config-accent-color-rgb), 0.2);
   }
 }
 
@@ -161,7 +163,7 @@
 }
 
 .wlan-selector {
-  margin: 4px;
+  margin: var(--popups-margin);
   width: 260px;
   max-height: 50vh;
   box-shadow: 0 0 10px 10px #0001;
@@ -228,7 +230,7 @@
 }
 
 .media-control {
-  margin: 4px;
+  margin: var(--popups-margin);
   width: 300px;
   padding: 10px;
 
@@ -323,12 +325,13 @@
 }
 
 .notifications {
-  margin: 4px;
+  margin: var(--popups-margin);
   width: 350px;
   padding: 10px;
   display: flex;
   flex-direction: column;
   gap: 10px;
+  max-height: calc(100vh - var(--config-height) - (var(--popups-margin) * 2));
 
   .bg-layer-1 {
     opacity: 0.4;
@@ -339,7 +342,7 @@
   }
 
   .bg-layer-2 {
-    opacity: 0.9;
+    opacity: 0.95;
     background-color: var(--color-gray-100);
     border-radius: 12px;
   }
@@ -350,6 +353,15 @@
   align-items: center;
   justify-content: space-between;
   font-weight: 600;
+}
+
+.notifications-body {
+  overflow-y: auto;
+  padding: 5px 10px;
+  margin: 0 -10px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
 .notifications-footer {
@@ -371,7 +383,7 @@
 .notification {
   border-radius: 12px;
   background-color: var(--color-gray-100);
-  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.5);
+  box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.4);
   padding: 10px;
 }
 
